# SO

cw01/zad1/: PersonList.c  PersonList.h  makefile
cw01/zad2/: PersonListTest.c  makefile
cw02/zad1/: .makefile.swp  .test.txt.swp  libBubble  libBubbleSort.c  libFuncGenerator  libFuncGenerator.c  makefile  sysBubble  sysBubbleSort.c  systemFuncGenerator  systemFuncGenerator.c  wyniki.txt
cw02/zad2/: makefile  prog1.c  prog2.c
cw02/zad3/: makefile  program.c  sth.txt
cw03/zad1/: Rscript.txt  Rscript.txt~  makefile  makefile~  results.txt  test  test.c
cw03/zad2/: file_counter.c  makefile
cw04/zad1/: makefile  zad.c
cw04/zad2/: makefile  zad.c
cw04/zad3/: zad.c
cw05/zad1/: makefile  program.c
cw05/zad2/: makefile  rdfifo.c  wrfifo.c
cw05/zad3/: makefile  program.c
cw06/zad1/: client.c  makefile  server.c
cw06/zad2/: client.c  makefile  server.c
cw07/zad1/: makefile  program  program.c
cw07/zad2/: makefile  program.c
cw08/zad1/: makefile  wersja1.c  wersja2.c  wersja3.c
cw08/zad2/: makefile  zad2.raport  zad2.raport~  zadanie.c  zadanie2.c  zadanie4.c  zadanieB.c
cw09/zad1/: makefile  zadanie.c
cw09/zad2/: makefile  zadanie.c
cw10/so_10/: .hgignore
cw10/so_10/.hg/: dirstate  hgrc  last-message.txt  undo.dirstate
cw10/so_10/.hg/cache/: branch2-served
cw10/so_10/.hg/store/: 00changelog.i  00manifest.i  (+3 more)
cw10/so_10/zad01/: CMakeLists.txt  Makefile  makefile  server.c
cw10/so_10/zad02/: CMakeLists.txt  Makefile_CLion  makefile
cw10/so_10/zad02/src/: client.c  config.h  message.h  queue.h  server.c  sockaddr_cmp.c  sockaddr_cmp.h
(+20 files in other folders)
